HTML structure of UI s created. Also the style.css file is created

--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
-    <title>Document</title>
+    <script src="script.js" defer></script>
+    <title> Rock Paper Scissors Challenge</title>
 </head>
 <body>
-    
+    <h1>Rock Paper Scissors Challenge</h1>
+    <div>
+        <p>
+            Challenge our super intelligent computer in a rock paper scissors game. The first one to win 5 games will be considered the rock paper scissors master.
+        </p>
+    </div>
+    <div id="resultDisplay">
+        <h1>HERE IS THE RESULT</h1>
+    </div>
+    <div class="btnGroup">
+        <p>
+            Select your option.
+        </p>
+        <button id="btnRock">Rock</button>
+        <button id="btnPaper">Paper</button>
+        <button id="btnScissors">Scissors</button>
+    </div>
 </body>
 </html>
