Logic of the game is working. The points counter is no well implemented yet

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title> Rock Paper Scissors Challenge</title>
 </head>
 <body>
     <h1>Rock Paper Scissors Challenge</h1>
     <div>
+        <!--Description of the game-->
         <p>
             Challenge our super intelligent computer in a rock paper scissors game. The first one to win 5 games will be considered the rock paper scissors master.
         </p>
     </div>
+    <!--Here is displayed the current result-->
     <div id="resultDisplay">
         <h1>HERE IS THE RESULT</h1>
     </div>
@@ -21,6 +24,7 @@
         <p>
             Select your option.
         </p>
+        <!--Main buttons of the game. These will trigger the game function-->
         <button id="btnRock">Rock</button>
         <button id="btnPaper">Paper</button>
         <button id="btnScissors">Scissors</button>
