The structure of page is fully complete, it works. The next step is to polish the overall style

--- a/index.html
+++ b/index.html
@@ -17,12 +17,22 @@
         </p>
     </div>
     <!--Here is displayed the current result-->
-    <div id="resultDisplay">
-        <h1>HERE IS THE RESULT</h1>
+    <div>
+        <h1 id="resultDisplay"></h1>
+        <div id="playersSelections">
+            <div id="userSelection">
+                <img src="images/placeholder.jpeg" alt="" id="userImage">
+                <h3>User Points</h3>
+            </div>
+            <div id="cpuSelection">
+                <img src="images/placeholder.jpeg" alt="" >
+                <h3>CPU Points</h3>
+            </div>
+        </div>
     </div>
-    <p>
+    <h1>
         Select your option.
-    </p>
+    </h1>
     <div class="btnGroup">
 
         <!--Main buttons of the game. These will trigger the game function-->
